Got rid of my temporary fix for our data being behind since there was a different issue causing it to not work properly. Fixed the datatables sorting by adding a hidden date formatted for the datatables to be able to sort by date correctly

--- a/web/styles/dashboard.css
+++ b/web/styles/dashboard.css
@@ -30,6 +30,10 @@ and open the template in the editor.
     overflow:auto;
 }
 
+table span{
+    display:none;
+}
+
 #data_table td ,#data_table th, #popup td ,#popup th{
     border: 1px solid #ddd;
     padding: 8px;
